--- a/index.html
+++ b/index.html
@@ -28,12 +28,21 @@
 <section id="fullindex" style="display:none;">
 <div id="aboutContainer">
     <div id="about" style="display:none;">
-        <div class="p"><p>Mikki is a designer, researcher, and art director logging on from Brooklyn, New York.</p>
-            <br><p>Currently at <a href="https://www.nytimes.com/" tagret="_blank">The New York Times</a> and <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>. Previously a research fellow at <a href="guggenheim.org" target="_blank">The Guggenheim Museum</a>. Winner of a <a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">2020 TDK Award</a>.</p></div>
-        <div class="contact"><p>Always open to new projects, collaborations, conversations, and friends.</p><br><a href="mailto:mikki@janower.net" target="_blank">Email</a><br><a href="http://instagram.com/mikki.work" target="_blank"> Instagram</a><br><span>Resume upon request</span><br><!--<a href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>--></div>
-       <!-- <span style="display:none;">Contact via</span><div class="mobilecontact"><a class="flip" style="white-space: nowrap;" href="http://instagram.com/mikki.indd" target="_blank"> Instagram</a><a class="flip" style="white-space: nowrap;" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a><a class="flip" style="white-space: nowrap;" href="https://mikkijanower.work/assets/Janower_Resume.pdf" target="_blank">Resume</a><a class="flip" style="white-space: nowrap;" href="mailto:mikki@janower.net" target="_blank">Email</a> </div>-->
-        <img src="assets/headshot.jpg"> 
-      <!--  <div class="format"><span class="listview">List</span><span class="galleryview">Gallery</span></div></div>-->
+        <div class="p"><p>Mikki Janower is an interdisciplinary designer and researcher logging on from Brooklyn, New York.</p>
+            <br><p>She's currently working with <a href="https://www.nytimes.com/" tagret="_blank">The New York Times</a> and <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>. She also pursues culturally and civically engaged projects through her independent freelance practice. Previously, she was a research fellow at <a href="https://www.guggenheim.org/" target="_blank">The Guggenheim Museum</a>. She recieved a <a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">TDK Award</a> in 2020.</p></div> 
+        <div class="contact"><!--<p>Always open to new projects, collaborations, conversations, and friends.</p><br>--><a href="mailto:mikki@janower.net" target="_blank">Email</a>&nbsp/ <a href="http://instagram.com/mikki.work" target="_blank"> Instagram</a>&nbsp/ <a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a> <br><span>Resume available upon request</span><br><!--<a href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>-->
+            <div class="clients"> <br><p style="font-size:12px; opacity:.6; margin-bottom:4px;">Select Clients</p><p style="font-size:12px">
+                <a href="https://theglasshouse.org" target="_blank">The Glass House</a><br>
+                <a href="https://jewishcurrents.org" target="_blank">Jewish Currents</a><br>
+                <a href="https://undocumentedmigrationproject.org" target="_blank">Undocumented Migration Project</a><br>
+                Cul-de-Sac Records<br>
+                <a href="https://www.instagram.com/mall.nyc/" target="_blank">Mall NYC</a><br>
+                Rock City Mushrooms<br>
+                Lea Architecture<br>
+                <!--Washington University in St. Louis<br>-->
+                Nike </p></div>
+        </div>
+      <!--  <img src="assets/headshot.jpg"> -->
     </div>
 </div>
 <div class="listing">
