sober 21 launch update

--- a/armour.html
+++ b/armour.html
@@ -63,8 +63,8 @@
     </section>
        
         <div id="projfooter">
-            <a class="flip" href="joshualeifer.html">Back</a>
-            <a class="flip" href="discoveryourair.html">Next</a>
+            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="majorarcana.html">Next</a>
         </div>
 </section>
 
