--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="joshualeifer/jleifer1.png">
 
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
@@ -48,17 +49,14 @@
        
         <div id="projfooter">
             <a class="flip" href="index.html">Back</a>
-            <a class="flip" href="armour.html">Next</a>
+            <a class="flip" href="tci.html">Next</a>
         </div>
         </section>
 
         <script type="text/javascript">const title= "The Spirit Molecule";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-    <section id="about" style="display:none;">
-    <p><span class="big">Mikki Janower is a graphic designer and art director based in Brooklyn.</span> Her work reflects her multidisciplinary background, robust visual research, and acute typophilia. She loves freelance projects and collaborations, particularly work skewed towards music and the arts.<br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
-    <img src="assets/headshot.jpg">    
-</section>
+
     <section class="bottom sticky">
     <a class="flip" href="https://www.instagram.com/mikki.work/" target="_blank">Instagram</a>
     <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
