--- a/mariovoid.html
+++ b/mariovoid.html
@@ -31,7 +31,7 @@
     </div>
     <div id="description"><p>Play Nintendo à la Nietzsche! Help your favorite cartoon run ceaselessly into a neverending abyss—before time runs out. Good luck out there, and remember: you can't win.</p>
         <p>This game is unaffiliated with the Super Mario Bros franchise and all too relevant to our interminable, meaningless existence.</p>
-    <div class="detail"><p>Feeling hopeless? <a href="https://mikki-janower.github.io/supermariovoid/" target= "_blank" style="font-size:14px">Play the game</a></p><p>Merch is sold out, but <a href="https://everpress.com/mariovoid" target= "_blank" style="font-size:14px">check it out anyway.</a></p></div>
+    <div class="detail"><p>Feeling hopeless? <a href="https://mikki-janower.github.io/supermariovoid/" target= "_blank">Play the game</a></p><p>Merch is sold out, but <a href="https://everpress.com/mariovoid" target= "_blank">check it out anyway.</a></p></div>
     </div>
 
     <div id="gallery">
@@ -42,8 +42,8 @@
          </div>
        
         <div id="projfooter">
-            <a class="flip" href="discoveryourair.html">Back</a>
-            <a class="flip" href="postcursor.html">Next</a>
+            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="armour.html">Next</a>
         </div>
         </section>
 
