--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -18,7 +18,7 @@
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Reconna Typeface</a>
-    <a class="flip index">Index</a>
+    <!--<a class="flip index">Index</a>-->
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
