--- a/tci.html
+++ b/tci.html
@@ -19,8 +19,8 @@
     <section class="top sticky">
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
-    <a class="projectTitle">TCI Site Design</a>
-    <a class="flip index">Index</a>
+    <a class="projectTitle">The Creative Independent: Site Design</a>
+     <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" class="tcipage" style="display:none">
