--- a/community.html
+++ b/community.html
@@ -19,8 +19,8 @@
     <section class="top sticky">
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
-    <a class="projectTitle">A Community is a Garden</a>
-    <a class="flip index">Index</a>
+    <a class="projectTitle">The Guggenheim Museum: A Community is a Garden</a>
+     <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" class="communitypage" style="display:none">
