--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -19,7 +19,7 @@
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Joshua Leifer dotcom</a>
-    <a class="flip index">Index</a>
+    <!--<a class="flip index">Index</a>-->
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
