--- a/sober21.html
+++ b/sober21.html
@@ -20,7 +20,7 @@
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Sober 21</a>
-    <a class="flip index">Index</a>
+     <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" class="sober21page" style="display:none">
