--- a/cyberotica.html
+++ b/cyberotica.html
@@ -77,7 +77,7 @@
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 
     <section class="bottom sticky">
-        <a class="flip" href="https://www.instagram.com/mikki.work/" target="_blank">Instagram</a>
+        <a class="flip" href="https://www.instagram.com/_miikki/" target="_blank">Instagram</a>
         <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
         <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     </section>
