--- a/tci.html
+++ b/tci.html
@@ -19,7 +19,7 @@
     <section class="top sticky">
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
-    <a class="projectTitle">The Creative Independent: Site Design</a>
+    <a class="projectTitle">The Creative Independent</a>
      <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
