--- a/sober21.html
+++ b/sober21.html
@@ -36,7 +36,7 @@
     <div id="description"> <p><a href="https://thecreativeindependent.com" target="_blank">Sober 21</a> is a compendium of essays by, and interviews with, sober musicians. Through open conversation and intimate anecdotes, the zine raises awareness and provides resources for sobriety in the music industry.</p>
         <p>The zine uses negative space in lieu of traditional forms of image-making, creating moments of noise, interruption, reflection, and pause.</p>
         <p>Edited by Elia Einhorn and published by the Creative Independent.</p>
-    <div class="detail"><p><a href="https://57a8d5170bf79d28f69a90e0.cloud-preview.siteleaf.com/library/sober-21/" target = "_blank">Read Sober 21 on The Creative Independent</a></p><!--<p><a href="" target = "_blank">Read about Sober 21 on [Source Here].</a></p>--></div>
+    <div class="detail"><p><a href="https://57a8d5170bf79d28f69a90e0.cloud-preview.siteleaf.com/library/sober-21/" target = "_blank">Read Sober 21 on The Creative Independent</a></p><p><a href="https://coolhunting.com/culture/the-creative-independents-sober-21-free-zine-for-people-who-struggle-with-sobriety/" target = "_blank">Read about Sober 21 on Coolhunting.</a></p></div>
 </div>
 
     <div id="gallery">
