--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 </div>
 </div>
 
-<div class="listing full">
-    <div class="info"><span class="title" data-title="nytimes" data-link="nytimes.html">Art Direction</span>
+<!--<div class="listing full">
+    <div class="info"><span class="title" data-title="nytimes" data-link="nytimes.html">AD and Design</span>
     <br><span class="description">The New York Times</span>
-    <div class="type">News Design</div>
+    <div class="type">AD and News Design</div>
     <br><span class="year">2020 – ongoing</span></div>
     <div class="thumbnails"><img src="thumbnails/tci5.png"><img src="thumbnails/tci6.png"><img src="thumbnails/contents2.jpg"></div>
 <div class="extender" data-link="nytimes.html" data-target="" style="display:none;"> <div class="words" style="display:none;"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
    <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
-    <div class="images"><img src="nytimes/nyt.png"><img src="nytimes/nyt3.png"></div>
+    <div class="images"><img src="nytimes/poetryinsider_deep.jpg"><img src="nytimes/stapleton.jpg"></div>
 </div>
-</div> 
+</div> -->
 <div class="listing full">
     <div class="info"><span class="title" data-title="Cyberotica" data-link="cyberotica.html">Cyberotica</span>
     <br><span class="description">Sam Fox School of Design</span>
