--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </div>
 
 <div class="listing full">
-    <div class="info"><span class="title" data-title="TCI" data-link="tci.html">Site design</span>
+    <div class="info"><span class="title" data-title="TCI" data-link="tci.html">Site design updates</span>
     <br><span class="description">The Creative Independent</span>
     <div class="type">BFA Capstone</div>
     <br><span class="year">2020 – ongoing</span></div>
