--- a/tci.html
+++ b/tci.html
@@ -29,7 +29,7 @@
         <img src="tci/tci5.png">
             <div id="label"><span class="labelita">The Creative Independent</span><span class="labelreg">Homepage, 05. 2021</span></div>
     </div>
-    <div id="description"> <p>Slow and steady updates to <a href="https://thecreativeindependent.com" target="_blank">The Creative Independent</a>,  a growing repository of advice for creative people.</p> Co-designed and coded by <a href="https://elliott.computer">Elliott Cost</a>; built on, and inspired by, the original design by <a href="https://laurelschwulst.com/">Laurel Schwulst</a> and Elliott Cost.</p>
+    <div id="description"> <p>Slow and steady updates to <a href="https://thecreativeindependent.com" target="_blank">The Creative Independent</a>,  a growing repository of advice for creative people.</p> Co-designed and coded by <a href="https://elliott.computer">Elliott Cost</a>; built on, and inspired by, the original design by <a href="https://laurelschwulst.com/">Laurel Schwulst</a></p>
     <div class="detail"><p>About <a href="https://thecreativeindependent.com/about/" target = "_blank">The Creative Independent</a></p><p>Explore <a href="https://thecreativeindependent.com/people/" target = "_blank">the TCI rolodex</a></p></div>
 </div>
 
