--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
 </div>
 
-<!--<div class="listing full">
+<div class="listing full">
     <div class="info"><span class="title" data-title="nytimes" data-link="nytimes.html">AD and Design</span>
     <br><span class="description">The New York Times</span>
     <div class="type">AD and News Design</div>
@@ -79,7 +79,7 @@
    <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
     <div class="images"><img src="nytimes/poetryinsider_deep.jpg"><img src="nytimes/stapleton.jpg"></div>
 </div>
-</div> -->
+</div> 
 <div class="listing full">
     <div class="info"><span class="title" data-title="Cyberotica" data-link="cyberotica.html">Cyberotica</span>
     <br><span class="description">Sam Fox School of Design</span>
