--- a/nytimes.html
+++ b/nytimes.html
@@ -32,7 +32,7 @@
            <div id="label"><span class="caption">Drought and Abundance in Iraq's Marshes</span><span class="citation">Words and Photographs by Emilienne Malfatto</span></div>   
     </div>
     <div id="description"> <p>Currently working closely with the design directors of News Print Design to refresh 
-        the robust design system of the newspaper’s A an B-books. While the long-term project unfolds, tackling news design and art direction, from deadline projects to advance layouts to commissioned illustrations. </p>
+        the robust design system of the newspaper’s A and B-books. While the long-term project unfolds, tackling news design and art direction, from deadline projects to advance layouts to commissioned illustrations. </p>
     <div class="detail"><p>Last updated July 2021</p></div>
    </div> 
 
