--- a/nytimes.html
+++ b/nytimes.html
@@ -80,11 +80,11 @@
         <img src="nytimes/stapleton.jpg">
         <div id="label" style="justify-content:flex-start;"><span class="citation" style="width:50%; padding-right:8px;">Illustration by Antoine Cossé</span><span class="citation">Illustration by Holly Stapleton</span></div>
     </div>
-    <div class="diptych captioned">
+   <!-- <div class="diptych captioned">
         <img src="nytimes/invective.png">
         <img src="nytimes/bookreview.jpg">
         <div id="label" style="justify-content:flex-start;"><span class="citation" style="width:50%; padding-right:8px;">Photo Illustration by Mikki Janower</span><span class="citation">Photo Illustration by Mikki Janower</span></div>
-    </div>
+    </div>-->
     <div class="diptych captioned">
         <img src="nytimes/assault.png">
         <img src="nytimes/fike.png">
