transient grounds case study

--- a/index.html
+++ b/index.html
@@ -30,20 +30,33 @@
     <div id="about" style="display:none;">
         <div class="p"><p>Mikki Janower is an interdisciplinary designer and researcher logging on from Brooklyn, New York.</p>
             <br><p>She's currently working with <a href="https://www.nytimes.com/" tagret="_blank">The New York Times;</a> <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>; and clients across media, music, and the arts. Previously, she was a research fellow at <a href="https://www.guggenheim.org" target="_blank">The Guggenheim Museum</a>. She received a <a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">TDK Award</a> in 2020.</p></div> 
-        <div class="contact"><a href="mailto:mikki@janower.net" target="_blank">Email</a>&nbsp/ <a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a>&nbsp/ <a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a> <br><span>Resume available upon request</span><br><!--<a href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>-->
+        <div class="contact"><a href="mailto:mikki@janower.net" target="_blank">Email</a>&nbsp/ <a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a>&nbsp/ <a href="https://twitter.com/mikkijanower" target="_blank"> Twitter</a> / <a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a> <br><span>Resume available upon request</span><br><!--<a href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>-->
             <div class="clients"> <br><p style="font-size:12px; opacity:.6; margin-bottom:4px;">Select Clients</p><p style="font-size:12px">
                 <a href="https://theglasshouse.org" target="_blank">The Glass House</a><br>
                 <a href="https://jewishcurrents.org" target="_blank">Jewish Currents</a><br>
                 <a href="https://undocumentedmigrationproject.org" target="_blank">Undocumented Migration Project</a><br>
-                Cul-de-Sac Records<br>
+                <a href="https://acompi.nyc" target="_blank">ACOMPI</a><br>
                 <a href="https://www.instagram.com/mall.nyc/" target="_blank">Mall NYC</a><br>
+                <a href="https://nike.com" target="_blank">Nike</a><br>
+                <a href="https://kickstarter.com" target="_blank">Kickstarter</a><br>
                 Lea Architecture<br>
-                Nike<br>
-                Washington University in St. Louis </p></div>
+                Cul-de-Sac Records</p></div>
         </div>
       <!--  <img src="assets/headshot.jpg"> -->
     </div>
 </div>
+<div class="listing full">
+    <div class="info"><span class="title" data-title="Transient Grounds" data-link="transientgrounds.html">Transient Grounds</span>
+    <br><span class="description">ACOMPI x NARS Foundation</span>
+    <!--<div class="type">Zine design</div>-->
+    <br><span class="year">2021</span></div>
+    <div class="thumbnails"><img src="thumbnails/transientgrounds1.png"><img src="thumbnails/transientgrounds2.png"></div>
+<div class="extender" data-link="transientgrounds.html" data-target="" style="display:none;"> <!--<div class="words" style="display:none;"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
+   <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>-->
+    <div class="images"><img src="transientgrounds/subwayposter1.png"><img src="transientgrounds/subwayposter2.png"></div>
+</div>
+</div>
+
 <div class="listing">
     <div class="info"><span class="title" data-title="A Community is a Garden" data-link="community.html">A Community is a Garden</span>
     <br><span class="description">The Guggenheim Museum</span>
