added case study

--- a/spiritmolecule.html
+++ b/spiritmolecule.html
@@ -42,7 +42,7 @@
        
         <div id="projfooter">
             <a class="flip" href="index.html">Back</a>
-            <a class="flip" href="reconnatypeface.html">Next</a>
+            <a class="flip" href="quarterly.html">Next</a>
         </div>
         </section>
 
