--- a/index.html
+++ b/index.html
@@ -220,6 +220,18 @@
     </div>
 </div>
 
+<div class="listing full">
+    <div class="info"><span class="title">The Spirit Molecule</span>
+        <br>  <span class="description"> </span>
+        <div class="type">Design, writing, and research</div>
+      <span class="year">2019</span></div>
+    <div class="thumbnails"><img src="thumbnails/IMG_1099.jpg"><img src="thumbnails/IMG_1090.jpg"></div>
+    <div class="extender" data-link="spiritmolecule.html" data-target="" style="display:none;"> 
+        <div class="images"><img src="spiritmolecule/spirit-molecule-02.png"><img src="spiritmolecule/spirit-molecule-04.png"></div>
+        
+    </div>
+</div>
+
 <!--<div class="listing">
     <div class="info"><span class="title">The Spirit Molecule</div>
     <span class="description">A psychedelic microsite</div>
