TCI Turns 5 case study <3

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <a href="https://nike.com" target="_blank">Nike</a><br>
                 <a href="https://kickstarter.com" target="_blank">Kickstarter</a><br>
                 Lea Architecture<br>
-                Cul-de-Sac Records</p></div>
+                Cul-de-Sac Records<br>
+                Princeton University</p></div>
         </div>
       <!--  <img src="assets/headshot.jpg"> -->
     </div>
@@ -70,17 +71,6 @@
 </div>
 </div>
 
-<div class="listing full">
-    <div class="info"><span class="title" data-title="Sober 21" data-link="sober21.html">Sober 21</span>
-    <br><span class="description">The Creative Independent</span>
-    <div class="type">Zine design</div>
-    <br><span class="year">2021</span></div>
-    <div class="thumbnails"><img src="thumbnails/tci5.png"><img src="thumbnails/tci6.png"><img src="thumbnails/contents2.jpg"></div>
-<div class="extender" data-link="sober21.html" data-target="" style="display:none;"> <!--<div class="words" style="display:none;"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
-   <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>-->
-    <div class="images"><img src="sober21/IMG_6556.jpg"><img src="sober21/IMG_6445 copy.jpg"></div>
-</div>
-</div>
 
 <div class="listing full">
     <div class="info"><span class="title" data-title="nytimes" data-link="nytimes.html">Design and AD</span>
@@ -93,6 +83,19 @@
     <div class="images"><img src="nytimes/nyt15.png"><img src="nytimes/nyt152.png"></div>
 </div>
 </div> 
+
+<div class="listing full">
+    <div class="info"><span class="title" data-title="tci5" data-link="tci5.html">TCI Turns 5</span>
+    <br><span class="description">The Creative Independent</span>
+    <div class="type">Microsite design</div>
+    <br><span class="year">2021</span></div>
+    <div class="thumbnails"><img src="thumbnails/tci5.png"><img src="thumbnails/tci6.png"><img src="thumbnails/contents2.jpg"></div>
+<div class="extender" data-link="tci5.html" data-target="" style="display:none;"> <!--<div class="words" style="display:none;"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
+   <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>-->
+    <div class="images"><img src="tci5/tci56.png"><img src="tci5/tci513.png"></div>
+</div>
+</div>
+
 <div class="listing full">
     <div class="info"><span class="title" data-title="Cyberotica" data-link="cyberotica.html">Cyberotica</span>
     <br><span class="description">Sam Fox School of Design</span>
@@ -105,7 +108,6 @@
 </div>
 </div>
 
-
 <div class="listing full">
     <div class="info"><span class="title" data-title="Joshua Leifer dotcom" data-link="joshualeifer.html">Joshua Leifer dotcom</span>
         <br> <span class="description">Joshua Leifer</span>
@@ -115,18 +117,6 @@
     <div class="extender" data-link="joshualeifer.html" data-target="" style="display:none;"> 
         <div class="images"><img src="joshualeifer/joshualeifer copy.gif"><img src="joshualeifer/jleifer2.png"></div>   
     </div>
-</div>
-
-<div class="listing full">
-    <div class="info"><span class="title" data-title="TCI" data-link="tci.html">Site design updates</span>
-    <br><span class="description">The Creative Independent</span>
-    <div class="type">BFA Capstone</div>
-    <br><span class="year">2020 – ongoing</span></div>
-    <div class="thumbnails"><img src="thumbnails/tci5.png"><img src="thumbnails/tci6.png"><img src="thumbnails/contents2.jpg"></div>
-<div class="extender" data-link="tci.html" data-target="" style="display:none;"> <!--<div class="words" style="display:none;"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
-   <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>-->
-    <div class="images"><img src="tci/tci5.png"><img src="tci/tci6.png"></div>
-</div>
 </div>
 
 <div class="listing full">
@@ -154,6 +144,18 @@
 </div>
 
 <div class="listing full">
+    <div class="info"><span class="title" data-title="Sober 21" data-link="sober21.html">Sober 21</span>
+    <br><span class="description">The Creative Independent</span>
+    <div class="type">Zine design</div>
+    <br><span class="year">2021</span></div>
+    <div class="thumbnails"><img src="thumbnails/tci5.png"><img src="thumbnails/tci6.png"><img src="thumbnails/contents2.jpg"></div>
+<div class="extender" data-link="sober21.html" data-target="" style="display:none;"> <!--<div class="words" style="display:none;"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
+   <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>-->
+    <div class="images"><img src="sober21/IMG_6556.jpg"><img src="sober21/IMG_6445 copy.jpg"></div>
+</div>
+</div>
+
+<div class="listing full">
     <div class="info"><span class="title">Super Mario Void</span>
         <br> <span class="description">A video game for nihilists</span>
     <div class="type">Design and development</div>
@@ -177,6 +179,18 @@
 </div>
 
 <div class="listing full">
+    <div class="info"><span class="title" data-title="TCI" data-link="tci.html">Site design updates</span>
+    <br><span class="description">The Creative Independent</span>
+    <div class="type">BFA Capstone</div>
+    <br><span class="year">2020 – ongoing</span></div>
+    <div class="thumbnails"><img src="thumbnails/tci5.png"><img src="thumbnails/tci6.png"><img src="thumbnails/contents2.jpg"></div>
+<div class="extender" data-link="tci.html" data-target="" style="display:none;"> <!--<div class="words" style="display:none;"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
+   <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>-->
+    <div class="images"><img src="tci/tci5.png"><img src="tci/tci6.png"></div>
+</div>
+</div>
+
+<div class="listing full">
     <div class="info"><span class="title">Reflections on Practice</span>
         <br><span class="description">Not a process book</span>
         <br><span class="year">2019</span></div>
@@ -197,7 +211,7 @@
     </div>
 </div>
 
-<div class="listing full">
+<!--<div class="listing full">
     <div class="info"><span class="title">Reconna Typeface</span>
         <br> <span class="description">A typeface inspired by 19th-century print</span>
         <br> <span class="year">2019</span></div>   
@@ -206,7 +220,7 @@
         <div class="images"><img src="reconna/IMG_1237-2.jpg"><img src="reconna/IMG_1234-2.jpg"></div>
         
     </div>
-</div>
+</div>-->
 
 <div class="listing full">
     <div class="info"><span class="title">Found Soundscapes</span>
@@ -302,7 +316,7 @@
 
 <div class="listing full">
     <div class="info"><span class="title">Post-Science Quarterly</span>
-        <br> <span class="description">Publication Design</span>
+        <br> <span class="description">On imaginitive empiricism</span>
     <div class="type">Design and development</div>
     <br> <span class="year">2019</span></div> 
     <div class="thumbnails"><img src="thumbnails/quarterly1.jpg"></div>
@@ -335,7 +349,7 @@
 </div>-->
 
 <div class="more">
-  <span>Looking for something? More available upon request — <a href = "mailto::mikki@janower.net">ask away :)</a> </span> <span>Janower 2020</span>
+  <span>Looking for something? More available upon request — <a href = "mailto::mikki@janower.net">ask away :)</a> </span> <span>Janower 2021</span>
 </div>
 
 </section>  
