--- a/spiritmolecule.html
+++ b/spiritmolecule.html
@@ -31,7 +31,7 @@
     </div>
     <div id="description"><p><i>The Spirit Molecule</i> is a microsite exploring the debate around natural psychedelics. A groundbreaking study published in the 1960s suggests that the human pineal gland might produce DMT; six decades later, prominent thinkers continue to fantasize, polemicize, and hypothesize about its potential.</p>
         <p>Built to emulate the sensation of tripping, <i>The Spirit Molecule</i> employs a series of variables and algorithms to create a dynamic, ever-changing environment and make each page visit a unique experience.</p>
-    <div class="detail"><p>Featuring words adapted from <a href="https://aeon.co/essays/could-the-brain-produce-its-own-psychedelic-compound" target= "_blank" style="font-size:14px">"The Spirit Molecule"</a></p><p>Written by Graham St. John for <a href="http://aeon.co" target= "_blank" style="font-size:14px">Aeon Magazine</a></p></div>
+    <div class="detail"><p>Featuring words adapted from <a href="https://aeon.co/essays/could-the-brain-produce-its-own-psychedelic-compound" target= "_blank">"The Spirit Molecule"</a></p><p>Written by Graham St. John for <a href="http://aeon.co" target= "_blank">Aeon Magazine</a></p></div>
     </div>
 
     <div id="gallery">
