new nytimes case studies

--- a/discoveryourair.html
+++ b/discoveryourair.html
@@ -31,7 +31,7 @@
     </div>
     <div id="description"><p><i>Discover Your Air</i> is a '90s-infused campaign promoting a series of sneaker drops for Nike and Foot Locker. As a creative intern at Bullish, Inc., I worked on art direction, graphic design, and copywriting for deliverables including a game show hosted by iconic rapper Fat Joe and time capsule "unearthings" by NBA star Jayson Tatum and rapper Playboi Carti.</p>
         <p>Our campaign also featured pop-up events and influencer features across the country and a series of vertical iPhone videos by Rick Jacques.</p>
-    <div class="detail"><p>Bullish, Inc. for Nike & Foot Locker</p><p>Read about the campaign on <a href="https://www.adweek.com/creativity/fat-joe-nike-and-foot-locker-rediscover-90s-hip-hop-in-a-new-york-cab/" target="_blank" style="font-size: 14px">Adweek</a></p></div>
+    <div class="detail"><p>Bullish, Inc. for Nike & Foot Locker</p><p>Read about the campaign on <a href="https://www.adweek.com/creativity/fat-joe-nike-and-foot-locker-rediscover-90s-hip-hop-in-a-new-york-cab/" target="_blank">Adweek</a></p></div>
 </div>
 
     <div id="gallery">
