email and title changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="main top" style="grid-template-columns: 29% 35.5% 35.5%">
     <a class="name">Mikki</a>
     <a class="flip about">About</a>
-    <a href="mailto:mikki@janower.net" target="_blank" class="flip list">Contact</a>
+    <a href="mailto:info@mikki.studio" target="_blank" class="flip list">Contact</a>
     <!--<a class="flip email" href="mailto:mikki@janower.net" target="_blank">@</a>-->
     </section>
 
