--- a/tci.html
+++ b/tci.html
@@ -17,7 +17,7 @@
 <body>
     <!--<div class="querytown"></div>-->
     <section class="top sticky">
-    <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
+    <a class="name">Mikki</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">The Creative Independent</a>
      <!--<a class="flip index">Index</a>-->
