--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <section class="top sticky">
-    <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
+    <a class="name">Mikki</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Joshua Leifer dotcom</a>
     <!--<a class="flip index">Index</a>-->
