--- a/majorarcana.html
+++ b/majorarcana.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <section class="arcana top sticky">
-    <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
+        <a class="name">Mikki</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Cocktails of the Major Arcana</a>
     <!--<a class="flip index">Index</a>-->
