email fix again

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 </div>-->
 
 <div class="more">
-  <span>Looking for something? More available upon request — <a href = "mailto::mikki@janower.net">ask away :)</a> </span> <span>Janower 2021</span>
+  <span>Looking for something?<a href = "mailto:info@mikki.studio">ask away :)</a> </span> <span>Janower 2021</span>
 </div>
 
 </section>  
