--- a/sober21.html
+++ b/sober21.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Mikki Janower — The Creative Independent</title>
+    <title>Mikki Janower</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
