culling / new email

--- a/wintersession.html
+++ b/wintersession.html
@@ -19,14 +19,14 @@
     <section class="top sticky">
     <a class="name">Mikki</a>
 <!---------------------project title—change meeeeee---------------------------------->
-    <a class="projectTitle">Space Opera</a>
+    <a class="projectTitle">Wintersession</a>
      <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" class="wintersessionpage" style="display:none">
 
     <div id="hero">
-        <img src="spaceopera/spaceopera1.jpeg">  
+        <img src="wintersession/spaceopera1.jpeg">  
           <!--  <div id="label"><span class="labelita">Space Opera</span><span class="labelreg">2022</span></div>-->
     </div>
     <div id="description"><p>Cover art for vol. 61 of <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>. The simple design uses found footage from the Apollo Missions. 
@@ -34,7 +34,7 @@
 </div>
 
     <div id="gallery">
-        <img src="spaceopera/spaceopera2.jpeg"> 
+        <img src="wintersession/spaceopera2.jpeg"> 
     </div>
        
         <div id="projfooter">
