--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
 </div>
 
 <div class="listing">
+    <div class="info"><span class="title" data-title="Wintersession" data-link="spaceopera.html">Wintersession</span>
+    <br><span class="description">Princeton University</span></div>
+<div class="extender" data-link="wintersession.html" data-target="" style="display:none;"> 
+    <div class="images"><img src="wintersession/wintersession.jpeg"><img src="wintersession/wintersession2.jpeg"></div>
+</div>
+</div>
+
+<div class="listing">
     <div class="info"><span class="title" data-title="Transient Grounds" data-link="transientgrounds.html">Transient Grounds</span>
     <br><span class="description">ACOMPI x NARS Foundation</span></div>
 <div class="extender" data-link="transientgrounds.html" data-target="" style="display:none;"> 
