--- a/transientgrounds.html
+++ b/transientgrounds.html
@@ -54,7 +54,7 @@
 
     <section class="bottom sticky">
         <a class="flip" href="https://www.instagram.com/_miikki/" target="_blank">Instagram</a>
-        <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
+        <a class="flip" href="mailto:info@mikki.studio" target="_blank">Email</a>
         <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     </section>
 
