--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
 </div>
 
 <div class="listing">
+    <div class="info"><span class="title">Reconna</span>
+        <br> <span class="description">Type Design</span></div>   
+    <div class="extender" data-link="reconnatypeface.html" data-target="" style="display:none;"> 
+        <div class="images"><img src="reconna/IMG_1237-2.jpg"><img src="reconna/IMG_1234-2.jpg"></div>
+        
+    </div>
+</div>
+
+<div class="listing">
     <div class="info"><span class="title">Armour Magazine</span>
         <br><span class="description">Creative Direction</span></div>
     <div class="extender" data-link="armour.html" data-target="" style="display:none;"> 
@@ -180,17 +189,6 @@
 <div class="extender" data-link="tci.html" data-target="" style="display:none;">
     <div class="images"><img src="tci/tci5.png"><img src="tci/tci6.png"></div>
 </div>
-</div>-->
-
-<!--<div class="listing full">
-    <div class="info"><span class="title">Reconna Typeface</span>
-        <br> <span class="description">A typeface inspired by 19th-century print</span>
-        <br> <span class="year">2019</span></div>   
-    <div class="thumbnails"><img src="thumbnails/IMG_1234-2.jpg"><img src="thumbnails/IMG_1237-2.jpg"></div>
-    <div class="extender" data-link="reconnatypeface.html" data-target="" style="display:none;"> 
-        <div class="images"><img src="reconna/IMG_1237-2.jpg"><img src="reconna/IMG_1234-2.jpg"></div>
-        
-    </div>
 </div>-->
 
 <!--<div class="listing full">
