hide unfinished wintersession case study

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 </div>
 </div>
 
-<div class="listing">
+<!--<div class="listing">
     <div class="info"><span class="title" data-title="Wintersession" data-link="spaceopera.html">Wintersession</span>
     <br><span class="description">Princeton University</span></div>
 <div class="extender" data-link="wintersession.html" data-target="" style="display:none;"> 
-    <div class="images"><img src="wintersession/wintersession.jpeg"><img src="wintersession/wintersession2.jpeg"></div>
+    <div class="images"><img src="wintersession/download-2.jpeg"><img src="wintersession/wintersession2.jpeg"></div>
 </div>
-</div>
+</div>-->
 
 <div class="listing">
     <div class="info"><span class="title" data-title="Transient Grounds" data-link="transientgrounds.html">Transient Grounds</span>
