--- a/wintersession.html
+++ b/wintersession.html
@@ -26,7 +26,7 @@
    <section id="project" class="wintersessionpage" style="display:none">
 
     <div id="hero">
-        <img src="wintersession/spaceopera1.jpeg">  
+        <img src="wintersession/IMG_1261.jpeg">  
           <!--  <div id="label"><span class="labelita">Space Opera</span><span class="labelreg">2022</span></div>-->
     </div>
     <div id="description"><p>Cover art for vol. 61 of <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>. The simple design uses found footage from the Apollo Missions. 
